fix alignment of content in marquee

--- a/src/features/ui/marquee/marquee.module.scss
+++ b/src/features/ui/marquee/marquee.module.scss
@@ -10,7 +10,6 @@
     top: 0;
     left: 0;
     justify-content: center;
-    align-items: center;
     gap: 1rem;
     width: fit-content;
     height: fit-content;
